# study

./: AutoHotKey.ahk.ahk  android Studio.md  generateLogId.bat  push_to_remote.bat
24MM/TUS/TUS/tus-sdk-release-main/: CMakeLists.txt  README.md
24MM/TUS/TUS/tus-sdk-release-main/docs/: readme.txt
24MM/TUS/TUS/tus-sdk-release-main/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
24MM/TUS/TUS/tus-sdk-release-main/docs/html/_resources/oss_list/: TUS_Runtime_OSS_Libraries.csv
24MM/TUS/TUS/tus-sdk-release-main/docs/html/_static/: copybutton.js  index.html
24MM/TUS/TUS/tus-sdk-release-main/docs/html/_static/css/: rtd_extension.css
24MM/TUS/TUS/tus-sdk-release-main/docs/html/contents/: api_reference.html  appendix.html  cli_reference.html  document_architecture.html  releasenote.html  tup.html  tus_overview.html  tus_sdk_roadmap.html  tutorial.html  uninstall.html
24MM/TUS/TUS/tus-sdk-release-main/docs/html/contents/cli_references/: delta.html  dtool.html  pdp.html  tup.html  tus.html
24MM/TUS/TUS/tus-sdk-release-main/docs/html/contents/cli_references/pdp/: sdpv3.html
24MM/TUS/TUS/tus-sdk-release-main/docs/html/contents/tup_docs/: tup_design.html  tup_introduction.html  tup_specification.html
24MM/TUS/TUS/tus-sdk-release-main/docs/html/contents/tutorial/: tutorial_devhttpd.html  tutorial_local.html  tutorial_using_emoota_sdpv3.html
24MM/TUS/TUS/tus-sdk-release-main/error_code/: CMakeLists.txt  facility_code.csv
24MM/TUS/TUS/tus-sdk-release-main/etc/cmake/toolchain/: qnx710.cmake
24MM/TUS/TUS/tus-sdk-release-main/etc/docker/: Dockerfile.aarch64
24MM/TUS/TUS/tus-sdk-release-main/etc/docker/cross_build/: Dockerfile  Dockerfile.ubuntu2004  local.conf
24MM/TUS/TUS/tus-sdk-release-main/etc/emoota/v3/: create_campaigns.sh  create_update_vehicle_resources.sh  deploy_confs.sh  init_vehicles.sh  master_pubkey.der  rootca.pem  sample_localized_message.csv
24MM/TUS/TUS/tus-sdk-release-main/include/: queue.h
24MM/TUS/TUS/tus-sdk-release-main/src/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/curl/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/delta_update/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/delta_update/include/: delta_update.h  delta_update_bsdiff.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/delta_update/src/: delta_update.c  delta_update_bsdiff.c  delta_update_bsdiff_internal.h  delta_update_internal.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/emoota/r3/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/emoota/r3/cmake/: ConfigCCache.cmake  ConfigEMoota.cmake
24MM/TUS/TUS/tus-sdk-release-main/src/lib/emoota/r3/lib/abs_layer/: CMakeLists.txt  README.md
24MM/TUS/TUS/tus-sdk-release-main/src/lib/emoota/r3/lib/uptane/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/emoota/r3/lib/utility/: .clang-format  CMakeLists.txt  README.md  Toolchain_Morty_openssl.cmake  util_app_main.cpp
24MM/TUS/TUS/tus-sdk-release-main/src/lib/grpc/: .clang-tidy  .gitignore  CMakeLists.txt  README.tus
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/: CMakeLists.txt  README.tus
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/lib/core/: context.c  logs.c  lws_map.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/lib/misc/: dir.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/lib/misc/cache-ttl/: file.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/lib/plat/unix/: unix-fds.c  unix-file.c  unix-init.c  unix-misc.c  unix-service.c  unix-sockets.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/lib/roles/http/: date.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/lib/roles/raw-file/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/libwebsockets/plugins/deaddrop/assets/: index.html
24MM/TUS/TUS/tus-sdk-release-main/src/lib/lua/: CMakeLists.txt  README_TUS.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/lz4/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/mbedtls/: README.tus
24MM/TUS/TUS/tus-sdk-release-main/src/lib/posix_errno/: CMakeLists.txt
24MM/TUS/TUS/tus-sdk-release-main/src/lib/posix_errno/error_code/: CMakeLists.txt  posix.csv
24MM/TUS/TUS/tus-sdk-release-main/src/lib/posix_errno/include/: tmc_posix_errno.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tiny-json/: CMakeLists.txt  tiny-json.c  tiny-json.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tiny-json/examples/: example-01.c  makefile
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tiny-json/test/: CMakeLists.txt  tests.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/: CMakeLists.txt  pubkey.pem
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/error_code/: CMakeLists.txt  tup_parser.csv
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/include/: tup_parser.h  tup_parser_error_code.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/lua_wrapper/: CMakeLists.txt  tup_parser_wrapper.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/src/: tup_parser.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/src/compress/: CMakeLists.txt  tup_compress.c  tup_compress.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/src/compress/lz4/: CMakeLists.txt  lz4.c  tup_lz4.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/src/compress/zlib/: CMakeLists.txt  tup_zlib.h  zlib.c
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/src/crypt/: CMakeLists.txt  tup_crypt.c  tup_crypt.h
24MM/TUS/TUS/tus-sdk-release-main/src/lib/tup/src/crypt/mbedtls/: CMakeLists.txt  (+1 more)
24MM/TUS/TUS/tus-sdk-release-main/src/tools/protoc/protoc_grpc_lua_plugin/: protoc-gen-grpc_lua
24MM/TUS/TUS/tus-sdk-release-main/src/tools/protoc/protoc_grpc_lua_plugin/protoc_gen_grpc_lua/: __init__.py  format.py  generator.py
24MM/TUS/TUS/tus-sdk-release-main/src/tools/protoc/protoc_lua_plugin/: protoc-gen-lua
24MM/TUS/TUS/tus-sdk-release-main/src/tools/protoc/protoc_lua_plugin/protoc_gen_lua/: __init__.py  __main__.py  byte_size_long.py  generator.py  helper.py  internal_parse.py  internal_serialize.py  new.py
(+476 files in other folders)
