# TMC CONFIDENTIAL
# $TUSLibId$
# Copyright (C) 2022 TOYOTA MOTOR CORPORATION
# All Rights Reserved.
# TMC CONFIDENTIAL
# $JITDFLibId$
# Copyright (C) 2022 TOYOTA MOTOR CORPORATION
# All Rights Reserved.

cmake_minimum_required(VERSION 3.13)

project(jitdf_error_code)

#install(FILES facility_code.csv
#  DESTINATION "error_code/facility/"
#  )
